Working user service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8092
 
 # App Properties
-app.jwtSecret=jwtGalvanizeSecretKey
+app.jwtSecret=jwtSecretKey
 
 # expire after 86,400 seconds (i.e., 1 day)
 app.jwtExpiration=86400
